chore(distro): clean up wildfly subsystem code (#4111)
* Java deprecations : class.newInstance -> class.getDeclaredConstructor().newInstance()
* WildFly
  * (DeploymentPhaseContext) getServiceTarget() ->
getRequirementServiceTarget()
  * (OperationContext) getServiceTarget() -> getCapabilityServiceTarget()
  * use default constructor for AbstractAddStepHandler
* jboss-modules
  * (Module) getIdentifier() -> getName()
  * ModuleIdentifier -> String
* jboss-threads
  * remove ExecutionTimedOutException usage
* JBoss MSC - reduce usage of deprecations in classes addService + requires + provides
  * ProcessApplicationModuleService
  * MscExecutorService
  * MscRuntimeContainerDelegate
  * MscBpmPlatformPlugins
  * MscRuntimeContainerJobExecutor
  * use #addService(serviceName) to register the services with their names
  * remove addAliases usage
* improve code: 
  * replace #length() == 0 with #isEmpty()
  * remove redundant code
  * remove unused suppress
  * improve naming
  * add override annotation, adjust imports and whitespaces
  * clean up TODO and adjust formatting
  * fix typo in module identifier constants
  * remove empty undeploy method
  * remove redundant comments
  * adjust formatting
  * replace lambda with method reference
  * fix typos
  * remove redundant deprecation annotation of THREAD_POOL_NAME
  * add final modifier

related to https://github.com/camunda/camunda-bpm-platform/issues/3589